--- a/TestTrvisDemo/.travis.yml
+++ b/TestTrvisDemo/.travis.yml
@@ -4,9 +4,9 @@ jdk: oraclejdk8          #jdk版本
 sudo: required           #权限要求
 #env:                 #环境变量
 global:
-- ANDROID_API=29
-- EMULATOR_API=29
-- ANDROID_BUILD_TOOLS=29.0.2
+- ANDROID_API=26
+- EMULATOR_API=26
+- ANDROID_BUILD_TOOLS=26.0.2
 - ADB_INSTALL_TIMEOUT=5 # minutes
 android:             #Android 环境要求
 components:
@@ -18,7 +18,7 @@ components:
 - extra-google-m2repository
 - extra-android-m2repository        # 配置design 库 
 - addon-google_apis-google-19       # 配置google play services
-- sys-img-armeabi-v7a-android-$ANDROID_API
+#- sys-img-armeabi-v7a-android-$ANDROID_API
 - sys-img-armeabi-v7a-android-$EMULATOR_API
 licenses:               #内容许可添加
 - android-sdk-preview-license-.+
@@ -30,6 +30,7 @@ before_script:
 - echo no | android create avd --force -n test -t android-$EMULATOR_API --abi armeabi-v7a
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
+- adb shell input keyevent 82 &
 
 #########
 env:
