--- a/TestTrvisDemo/.travis.yml
+++ b/TestTrvisDemo/.travis.yml
@@ -1,36 +1,40 @@
-language: android        #语言说明
+language: android
 dist: trusty
-jdk: oraclejdk8          #jdk版本
-sudo: required           #权限要求
-#env:                 #环境变量
-global:
-- ANDROID_API=26
-- EMULATOR_API=26
-- ANDROID_BUILD_TOOLS=26.0.2
-- ADB_INSTALL_TIMEOUT=5 # minutes
-android:             #Android 环境要求
-components:
-- tools
-- platform-tools
-- build-tools-$ANDROID_BUILD_TOOLS
-- android-$ANDROID_API
-- android-$EMULATOR_API
-- extra-google-m2repository
-- extra-android-m2repository        # 配置design 库 
-- addon-google_apis-google-19       # 配置google play services
-#- sys-img-armeabi-v7a-android-$ANDROID_API
-- sys-img-armeabi-v7a-android-$EMULATOR_API
-licenses:               #内容许可添加
-- android-sdk-preview-license-.+
-- android-sdk-license-.+
-- google-gdk-license-.+
+android:
+  components:
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
+    # - tools
+    # - platform-tools
 
-#####
-before_script:
-- echo no | android create avd --force -n test -t android-$EMULATOR_API --abi armeabi-v7a
-- emulator -avd test -no-skin -no-audio -no-window &
-- android-wait-for-emulator
-- adb shell input keyevent 82 &
+    # The BuildTools version used by your project
+    - build-tools-26.0.2
+
+    # The SDK version used to compile your project
+    - android-26
+    - android-22
+
+    # Additional components
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+
+    licenses:
+      - 'android-sdk-preview-license-52d11cd2'
+      - 'android-sdk-license-.+'
+      - 'google-gdk-license-.+'
+
+    # Specify at least one system image,
+    # if you need to run emulator(s) during your tests
+    - sys-img-x86-android-26
+    - sys-img-armeabi-v7a-android-22
+
+  before_script:
+    - chmod +x gradle
+    - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+    - emulator -avd test -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
 
 #########
 env:
