--- a/TestTrvisDemo/.travis.yml
+++ b/TestTrvisDemo/.travis.yml
@@ -30,7 +30,7 @@ android:
     - sys-img-armeabi-v7a-android-22
 
   before_script:
-    - chmod +x gradle
+    - chmod +x gradlew
     - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
     - emulator -avd test -no-audio -no-window &
     - android-wait-for-emulator
