update new yml file

--- a/TestTrvisDemo/.travis.yml
+++ b/TestTrvisDemo/.travis.yml
@@ -1,48 +1,39 @@
-language: android
-dist: trusty
-android:
-  components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - tools
-    # - platform-tools
+language: android        #语言说明
+jdk: oraclejdk8          #jdk版本
+sudo: required           #权限要求
 
-    # The BuildTools version used by your project
-    - build-tools-26.0.2
+android:             #Android 环境要求
+components:
+  - tools
+  - platform-tools
+  - build-tools-26.0.2
+  - android-26
+  - android-22
+  - sys-img-x86-android-26
+  - sys-img-armeabi-v7a-android-22
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository
+licenses:               #内容许可添加
+  - android-sdk-preview-license-.+
+  - android-sdk-license-.+
+  - google-gdk-license-.+
 
-    # The SDK version used to compile your project
-    - android-26
-    - android-22
-
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-
-    licenses:
-      - 'android-sdk-preview-license-52d11cd2'
-      - 'android-sdk-license-.+'
-      - 'google-gdk-license-.+'
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-x86-android-26
-    - sys-img-armeabi-v7a-android-22
-
-  before_script:
-    - chmod +x gradlew
-    - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
-    - emulator -avd test -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
+#####
+before_script:
+  - chmod +x gradlew
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 #########
 env:
-    bundle_id: com.cuilingshi.fileextract
-    callback_url: http://api-mas-admin-test.yodo1.com/api/mas/task/async/3258d827-e7bc-4cf4-98f2-f84e4b3f0ffe
-    sdk_key: rNHXebCtrUWyeDeAihKoDCmwM9sL2WfshXTVHs-7N0yUBE4D0KtcycoTQgE7Ha2a9CsCn9WI22ZwsJQ29h6LzI
-    app_name: Unzip - zip file opener
-    
+  bundle_id: com.cuilingshi.fileextract
+  callback_url: http://api-mas-admin-test.yodo1.com/api/mas/task/async/3258d827-e7bc-4cf4-98f2-f84e4b3f0ffe
+  sdk_key: rNHXebCtrUWyeDeAihKoDCmwM9sL2WfshXTVHs-7N0yUBE4D0KtcycoTQgE7Ha2a9CsCn9WI22ZwsJQ29h6LzI
+  app_name: Unzip - zip file opener
+
 cache:
   bundler: true
   directories:
