update new yml file 3

--- a/TestTrvisDemo/.travis.yml
+++ b/TestTrvisDemo/.travis.yml
@@ -1,23 +1,41 @@
-language: android
-jdk: oraclejdk8
-sudo: false
+language: android        #语言说明
+jdk: oraclejdk8          #jdk版本
+sudo: required           #权限要求
+android:             #Android 环境要求
+components:
+  - tools
+  - platform-tools
+  - build-tools-26.0.2
+  - android-26
+  - android-22
+  - extra-google-m2repository
+  - extra-android-m2repository        # 配置design 库
+#  - addon-google_apis-google-19       # 配置google play services
+#  - sys-img-armeabi-v7a-android-26
+  - sys-img-armeabi-v7a-android-22
+licenses:               #内容许可添加
+  - android-sdk-preview-license-.+
+  - android-sdk-license-.+
+  - google-gdk-license-.+
 
-android:
-  components:
-    - platform-tools
-    - tools
-    - build-tools-26.0.2
-    - android-26
-    - android-22
-    - sys-img-armeabi-v7a-android-22
-    - extra-android-m2repository
-
+#####
 before_script:
   - chmod +x gradlew
-  # Create and start emulator
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: ./gradlew connectedAndroidTest
+#########
+env:
+  bundle_id: com.cuilingshi.fileextract
+  callback_url: http://api-mas-admin-test.yodo1.com/api/mas/task/async/3258d827-e7bc-4cf4-98f2-f84e4b3f0ffe
+  sdk_key: rNHXebCtrUWyeDeAihKoDCmwM9sL2WfshXTVHs-7N0yUBE4D0KtcycoTQgE7Ha2a9CsCn9WI22ZwsJQ29h6LzI
+  app_name: Unzip - zip file opener
+
+cache:
+  bundler: true
+  directories:
+    - Carthage
+
+script: "sh automate.sh $bundle_id $app_name $callback_url $sdk_key"
